--- a/la-mia-pizzeria-crud-mvc/Views/Home/Index.cshtml
+++ b/la-mia-pizzeria-crud-mvc/Views/Home/Index.cshtml
@@ -3,30 +3,36 @@
     Layout = "_Layout";
 }
 
-@model List<Pizza>
+<h1>Choose a pizza</h1>
+<div class="row mt-2" id="pizzas-container"></div>
 
-@if (Model.Count() == 0)
-{
-    <h3>
-        The owner of the restaurant has not yet added pizzas.
-    </h3>
-}
-else
-{
-    <h1>Choose a pizza</h1>
-    <div class="row mt-2">
-        @foreach (var pizza in Model)
-        {
-            <div class="col-lg-2 col-sm-6 col-md-4 d-flex justify-content-center mb-3">
-                <div class="card h-100 border-5 border-danger" style="width: 18rem;">
-                    <img src="@pizza.PhotoUrl" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">@pizza.Name</h5>
-                        <p class="card-text">@pizza.Description</p>
-                        <a href="@Url.Action("Details", "Home", new { id = pizza.Id })" class="btn btn-danger">Buy for @pizza.Price€</a>
-                    </div>
-                </div>
-            </div>
+@section Scripts {
+    <script type="text/javascript">
+
+        let pizzasContainer = document.getElementById("pizzas-container");
+        loadAllPizzas();
+
+        function loadAllPizzas() {
+            axios.get('/api/Pizzas/all')
+                .then((res) => {
+                    res.data.forEach(pizza => {
+                        console.log(pizza);
+                        pizzasContainer.innerHTML +=
+                            `
+                                    <div class="col-lg-2 col-sm-6 col-md-4 d-flex justify-content-center mb-3" >
+                                        <div class="card h-100 border-5 border-danger" style = "width: 18rem;" >
+                                            <img src="${pizza.photoUrl}" class="card-img-top" alt = "..." >
+                                                <div class="card-body">
+                                                    <h5 class="card-title" > ${pizza.name}</h5>
+                                                    <p class="card-text" > ${pizza.description}</p>
+                                                    <a href = "#" class="btn btn-danger" > Buy for ${pizza.price}€</a>
+                                                </div>
+                                        </div>
+                                     </div>
+                             `
+
+                    });
+                })
         }
-    </div>
+    </script>
 }
